--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,20 +2,34 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="nyy.org.yanglegeji">
 
+  <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+  <uses-permission android:name="android.permission.SYSTEM_OVERLAY_WINDOW"/>
+
   <application
 	android:allowBackup="true"
-	android:icon="@mipmap/ic_launcher"
-	android:label="@string/app_name"
+	android:icon="@drawable/icon_128_128"
+	android:label="@string/app_name_cn"
 	android:roundIcon="@mipmap/ic_launcher_round"
 	android:supportsRtl="true"
 	android:theme="@style/AppTheme">
-	<activity android:name=".MainActivity">
+
+	<activity android:name=".main.activity.SplashActivity"
+	  android:exported="true"
+	  android:label="@string/app_name_cn">
 	  <intent-filter>
 		<action android:name="android.intent.action.MAIN" />
-
 		<category android:name="android.intent.category.LAUNCHER" />
 	  </intent-filter>
 	</activity>
+
+	<activity android:name=".main.activity.MainActivity">
+	</activity>
+
+	<activity android:name=".main.activity.InitNameActivity">
+	</activity>
+
+	<service
+	  android:name=".main.service.FloatWindowService"/>
   </application>
 
 </manifest>
